--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastapi
-uvicorn[standard]
-pydantic
-google-generativeai>=0.8.3
-python-dotenv
-beautifulsoup4
+uvicorn
+python-multipart
+google-genai
+google-cloud-firestore
+pandas
+python-docx
 requests
